# rp2040_temp_fan_ctrl

./: Cargo.toml  README.md  fan_ctrl.fzz  fan_ctrl_with_led.fzz
src/: main.rs  write_to.rs
