[package]
name = "rp2040_temp_fan_ctrl"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rp-rs/rp-hal"
description = "A Rust Embeded-HAL impl for the rp2040 microcontroller"
license = "MIT OR Apache-2.0"

[package.metadata.docs.rs]
features = ["rt", "rom-v2-intrinsics", "defmt", "rtic-monotonic"]
targets = ["thumbv6m-none-eabi"]

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = ">=0.6.15,<0.8"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
eh1_0_alpha = { package = "embedded-hal", version = "=1.0.0-alpha.9",  optional = true }
rp2040-hal = "0.6.0"
rp2040-boot2 = "0.2.1"
panic-halt = "0.2.0"
fugit = "0.3.6"
lcd-lcm1602-i2c = "0.1.0"
libm = "0.2.6"
